Display market ticker sidebar

--- a/src/components/MarketSidebar.css
+++ b/src/components/MarketSidebar.css
@@ -1,5 +1,5 @@
-.market-sidebar {
-  width: 320px;
+.market-ticker {
+  width: 260px;
   background: #f8fafd;
   border-right: 1px solid #e5e8ef;
   height: 100vh;
